k8s_microservice/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-service-latest
  labels:
    app: microservice
    version: latest
spec:
  type: LoadBalancer
  selector:
    app: microservice
    version: latest
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000 

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    app: mongodb
    version: latest
spec:
  type: LoadBalancer
  selector:
    app: mongodb
    version: latest
  ports:
  - protocol: TCP
    port: 27017 
    targetPort: 27017
